cleaned up the test agent, broke up main.cpp in to several classes - CommServer is responsible to read from and write to the pipe that connects the agent to the server - WorldModel parses and stores sensor data - Behavior is the base class for all agent specific implemention. It defines virtual methods to process various events and holds references to the CommServer and WorldModel - Soccer is a Behavior class that adds several methods specific to the soccer simulation like Kick(), Dash(), CreateAgent() and InitAgent(). - KickNRun is a specific Soccer agent. Currently it implements the same basic behaviour as before. The intent is to implement a kick and run agent

--- a/app/agenttest/Makefile.am
+++ b/app/agenttest/Makefile.am
@@ -17,5 +17,16 @@ endif
 AM_CPPFLAGS = -I${top_srcdir}/plugin/soccer -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 AM_LDFLAGS  = @RUBY_LDFLAGS@
 
-agenttest_SOURCES = main.cpp
+agenttest_SOURCES = \
+	main.cpp \
+	worldmodel.cpp \
+	worldmodel_c.cpp \
+	commserver.cpp \
+	commserver_c.cpp \
+	behavior.cpp \
+	behavior_c.cpp \
+	kicknrun.cpp \
+	kicknrun_c.cpp \
+	soccer.cpp \
+	soccer_c.cpp
 
