- name changes from simulator to rcssserver3D (as in previous release) - added scripts for simple startup of simulator + monitor

--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,9 @@ app/simulator/.libs
 app/simulator/Logfiles
 app/simulator/Makefile
 app/simulator/Makefile.in
-app/simulator/simulator
+app/simulator/createagentdb.sh
+app/simulator/rcsoccersim3D
+app/simulator/rcssserver3D
 app/spadestest/.deps
 app/spadestest/.libs
 app/spadestest/Makefile
