--- a/.gitignore
+++ b/.gitignore
@@ -301,6 +301,11 @@ plugin/soccer/createeffector/.dirstamp
 plugin/soccer/createeffector/.libs
 plugin/soccer/createeffector/Makefile
 plugin/soccer/createeffector/Makefile.in
+plugin/soccer/driveeffector/*.la
+plugin/soccer/driveeffector/*.lo
+plugin/soccer/driveeffector/.deps
+plugin/soccer/driveeffector/.dirstamp
+plugin/soccer/driveeffector/.libs
 plugin/soccer/fieldflag/*.lo
 plugin/soccer/fieldflag/.deps
 plugin/soccer/fieldflag/.dirstamp
