added agenttest.rb to distribution

--- a/app/agenttest/Makefile.am
+++ b/app/agenttest/Makefile.am
@@ -25,3 +25,4 @@ agenttest_SOURCES = \
 	kicknrun.h kicknrun.cpp kicknrun_c.cpp \
 	soccer.h soccer.cpp soccer_c.cpp
 
+dist_pkgdata_DATA = agenttest.rb
