*** empty log message ***

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,18 @@ app/rcssmonitor3d/Makefile.in
 app/rcssmonitor3d/rcssmonitor3D
 app/rcssmonitor3d/spadestest
 app/rcssmonitor3d/sys
+app/rcssmonitor3d/kerosin/*.lo
+app/rcssmonitor3d/kerosin/.deps
+app/rcssmonitor3d/kerosin/.dirstamp
+app/rcssmonitor3d/kerosin/.libs
+app/rcssmonitor3d/lib/*.lo
+app/rcssmonitor3d/lib/.deps
+app/rcssmonitor3d/lib/.dirstamp
+app/rcssmonitor3d/lib/.libs
+app/rcssmonitor3d/lite/*.lo
+app/rcssmonitor3d/lite/.deps
+app/rcssmonitor3d/lite/.dirstamp
+app/rcssmonitor3d/lite/.libs
 app/scenetest/.deps
 app/scenetest/.libs
 app/scenetest/Makefile
