added conditional to build kerosin-based monitor only if libkerosin is built

--- a/app/rcssmonitor3d/kerosin/Makefile.am
+++ b/app/rcssmonitor3d/kerosin/Makefile.am
@@ -1,3 +1,4 @@
+if BUILD_KEROSIN
 bin_PROGRAMS = rcssmonitor3D-kerosin
 
 if DEBUG
@@ -18,6 +19,8 @@ LDADD = \
         ${top_srcdir}/lib/salt/libsalt.la \
 	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.a
 rcssmonitor3D_kerosin_CXXFLAGS = -O2
+endif
+
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib -I${top_srcdir}/plugin/soccer @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
