--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -182,7 +182,7 @@ PERL_PATH              = @PERL@
 #---------------------------------------------------------------------------
 CLASS_DIAGRAMS         = YES
 HIDE_UNDOC_RELATIONS   = YES
-HAVE_DOT               = YES
+HAVE_DOT               = @HAVE_DOT@
 CLASS_GRAPH            = YES
 COLLABORATION_GRAPH    = YES
 UML_LOOK               = NO
