--- a/lib/kerosin/Makefile.am
+++ b/lib/kerosin/Makefile.am
@@ -5,15 +5,17 @@ libkerosin_debug_la_SOURCES = $(sources)
 nodist_libkerosin_debug_la_SOURCES = openglserver/glextensionreg.cpp
 libkerosin_debug_la_CXXFLAGS = -O -g -W -Wall
 libkerosin_debug_la_LIBADD = @FREETYPE_LIBADD@ -lSDL -lIL -lGL 
-libkerosin_debug_la_LDFLAGS = -version-info 0:0:0
+libkerosin_debug_la_LDFLAGS = -version-info @kerosin_version_info@
 else
 pkglib_LTLIBRARIES = libkerosin.la
 libkerosin_la_SOURCES = $(sources) 
 nodist_libkerosin_la_SOURCES = openglserver/glextensionreg.cpp
 libkerosin_la_CXXFLAGS = -O2
 libkerosin_la_LIBADD = @FREETYPE_LIBADD@ -lSDL -lIL -lGL 
-libkerosin_la_LDFLAGS = -version-info 0:0:0
+libkerosin_la_LDFLAGS = -version-info @kerosin_version_info@
 endif
+
+bin_SCRIPTS = kerosin-config
 
 BUILT_SOURCES = openglserver/glextensionreg.h
 nobase_nodist_libpkginclude_HEADERS = openglserver/glextensionreg.h
