updated .cvsignore files

--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,7 @@ lib/kerosin/.deps
 lib/kerosin/.libs
 lib/kerosin/Makefile
 lib/kerosin/Makefile.in
+lib/kerosin/kerosin-config
 lib/kerosin/libkerosin*.la
 lib/kerosin/libkerosin*.lo
 lib/kerosin/fontserver/*.lo
@@ -154,6 +155,7 @@ lib/oxygen/.libs
 lib/oxygen/Makefile
 lib/oxygen/Makefile.in
 lib/oxygen/liboxygen*.la
+lib/oxygen/oxygen-config
 lib/oxygen/agentaspect/*.lo
 lib/oxygen/agentaspect/.deps
 lib/oxygen/agentaspect/.dirstamp
@@ -182,22 +184,24 @@ lib/oxygen/spadesserver/*.lo
 lib/oxygen/spadesserver/.deps
 lib/oxygen/spadesserver/.dirstamp
 lib/oxygen/spadesserver/.libs
-lib/salt/.deps
-lib/salt/.libs
-lib/salt/Makefile.in
-lib/salt/Makefile
 lib/salt/*.la
 lib/salt/*.lo
+lib/salt/.deps
+lib/salt/.libs
+lib/salt/Makefile
+lib/salt/Makefile.in
+lib/salt/salt-config
 lib/salt/gcc/.deps
 lib/salt/gcc/.dirstamp
 lib/salt/gcc/.libs
 lib/salt/gcc/*.lo
+lib/zeitgeist/*.la
+lib/zeitgeist/*.lo
 lib/zeitgeist/.deps
 lib/zeitgeist/.libs
 lib/zeitgeist/Makefile
 lib/zeitgeist/Makefile.in
-lib/zeitgeist/*.la
-lib/zeitgeist/*.lo
+lib/zeitgeist/zeitgeist-config
 lib/zeitgeist/fileserver/.deps
 lib/zeitgeist/fileserver/.dirstamp
 lib/zeitgeist/fileserver/.libs
