fixed link error

--- a/app/rcssmonitor3d/lib/Makefile.am
+++ b/app/rcssmonitor3d/lib/Makefile.am
@@ -1,5 +1,5 @@
 pkglib_LIBRARIES = librcssmonitor3D.a
-librcssmonitor3D_a_LIBADD = @RUBY_LDFLAGS@
+# librcssmonitor3D_a_LIBADD = @RUBY_LDFLAGS@
 AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/plugin/soccer @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 ## define include directory local to the pkgincludedir
