- added ruby scene importer

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -8,6 +8,7 @@ SUBDIRS = \
 	  collisionperceptor \
 	  sexpparser \
 	  soccer \
+          rubysceneimporter\
 	  soundsystemfmod
 
 # filesystemrar 
