- fixed include dir - added types.h to the headers

--- a/app/rcssmonitor3d/lib/Makefile.am
+++ b/app/rcssmonitor3d/lib/Makefile.am
@@ -1,6 +1,6 @@
 pkglib_LIBRARIES = librcssmonitor3D.a
 # librcssmonitor3D_a_LIBADD = @RUBY_LDFLAGS@
-AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/plugin/soccer @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/plugin @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 ## define include directory local to the pkgincludedir
 libpkgincludedir = $(includedir)/@PACKAGE@/rcssmonitor3d
@@ -19,6 +19,7 @@ libpkginclude_HEADERS = \
 	communit.h \
 	commserver.h \
 	tcpsocket.h \
+	types.h \
 	monitorparser.h \
 	gameparam.h \
 	gamestate.h 
