--- a/app/rcssmonitor3d/lite/Makefile.am
+++ b/app/rcssmonitor3d/lite/Makefile.am
@@ -18,7 +18,7 @@ LDADD = \
 rcssmonitor3D_lite_CXXFLAGS = -O2
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib -I${top_srcdir}/plugin/soccer @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib -I${top_srcdir}/plugin @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 AM_LDFLAGS  = @RUBY_LDFLAGS@
 
 rcssmonitor3D_lite_SOURCES = \
